force-app/main/default/objects/Targeting__c/Targeting__c.object-meta.xml
<CustomObject>
    <label>Targeting</label>
    <nameField>
        <label>Targeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targeting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>