force-app/main/default/objects/Targeting__c/fields/Additional_Targeting__c.field-meta.xml
<CustomField>
    <fullName>Additional_Targeting__c</fullName>
    <inlineHelpText>If there are targeting metrics that are new or not listed, please enter them here</inlineHelpText>
    <label>Additional Targeting</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>