force-app/main/default/objects/Targeting__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audience</label>
    <type>Checkbox</type>
</CustomField>