force-app/main/default/objects/Targeting__c/fields/Behavioral__c.field-meta.xml
<CustomField>
    <fullName>Behavioral__c</fullName>
    <label>Behavioral</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BehavorialCheck__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>First Party</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>