force-app/main/default/objects/Targeting__c/fields/BehavorialCheck__c.field-meta.xml
<CustomField>
    <fullName>BehavorialCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Behavioral</label>
    <type>Checkbox</type>
</CustomField>