force-app/main/default/objects/Targeting__c/fields/Campaign_City__c.field-meta.xml
<CustomField>
    <fullName>Campaign_City__c</fullName>
    <label>Campaign City</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>