force-app/main/default/objects/Targeting__c/fields/Campaign_Country__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Country__c</fullName>
    <defaultValue>IF(ISPICKVAL($User.User_Region__c, &quot;Japan&quot;),&quot;JP - Japan&quot;,IF(ISPICKVAL($User.User_Region__c, &quot;EMEA&quot;),&quot;GB - United Kingdom of Great Britain and Northern Ireland&quot;,&quot;US - United States of America&quot;))</defaultValue>
    <label>Campaign Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Targeting_Campaign_Country</valueSetName>
    </valueSet>
</CustomField>