force-app/main/default/objects/Targeting__c/fields/Campaign_DMA_New__c.field-meta.xml
<CustomField>
    <fullName>Campaign_DMA_New__c</fullName>
    <label>Campaign DMA</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>