force-app/main/default/objects/Targeting__c/fields/Campaign_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Campaign_State_Province__c</fullName>
    <label>Campaign State/Province</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Targeting_Campaign_State_Province</valueSetName>
    </valueSet>
</CustomField>