force-app/main/default/objects/Targeting__c/fields/Campaign_State_Province_New__c.field-meta.xml
<CustomField>
    <fullName>Campaign_State_Province_New__c</fullName>
    <label>Campaign State/Province</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>