force-app/main/default/objects/Targeting__c/fields/Campaign_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Zip_Code__c</fullName>
    <label>Campaign Zip Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>