force-app/main/default/objects/Targeting__c/fields/Category_Description__c.field-meta.xml
<CustomField>
    <fullName>Category_Description__c</fullName>
    <label>Category Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>