force-app/main/default/objects/Targeting__c/fields/Category_Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Category_Exclusivity__c</fullName>
    <label>Category Exclusivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>