force-app/main/default/objects/Targeting__c/fields/Custom_Description__c.field-meta.xml
<CustomField>
    <fullName>Custom_Description__c</fullName>
    <label>Custom Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>