force-app/main/default/objects/Targeting__c/fields/Event2__c.field-meta.xml
<CustomField>
    <fullName>Event2__c</fullName>
    <description>This field determines if the opportunity was an event or not</description>
    <label>Event</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>