force-app/main/default/objects/Targeting__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event Apex</label>
    <length>200</length>
    <type>Text</type>
</CustomField>