force-app/main/default/objects/Targeting__c/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Geo</label>
    <type>Checkbox</type>
</CustomField>