force-app/main/default/objects/Targeting__c/fields/IAB__c.field-meta.xml
<CustomField>
    <fullName>IAB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IAB</label>
    <type>Checkbox</type>
</CustomField>