force-app/main/default/objects/Targeting__c/fields/Insertion_Order__c.field-meta.xml
<CustomField>
    <fullName>Insertion_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insertion Order</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Targeting</relationshipLabel>
    <relationshipName>Targeting</relationshipName>
    <type>Lookup</type>
</CustomField>