force-app/main/default/objects/Targeting__c/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keyword</label>
    <type>Checkbox</type>
</CustomField>