force-app/main/default/objects/Targeting__c/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <label>Keywords</label>
    <length>200</length>
    <type>Text</type>
</CustomField>