force-app/main/default/objects/Targeting__c/fields/Retargeting__c.field-meta.xml
<CustomField>
    <fullName>Retargeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retargeting</label>
    <type>Checkbox</type>
</CustomField>