force-app/main/default/objects/Targeting__c/fields/Trend__c.field-meta.xml
<CustomField>
    <fullName>Trend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trend</label>
    <type>Checkbox</type>
</CustomField>