force-app/main/default/objects/Targeting__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Targeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audience</fullName>
            </value>
            <value>
                <fullName>Keyword</fullName>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
            <value>
                <fullName>Behavioral</fullName>
            </value>
            <value>
                <fullName>Trend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>