force-app/main/default/objects/Targeting__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>VerticalOld</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
                <label>Business &amp; Finance</label>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
                <label>Food &amp; Drink</label>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
                <label>Health &amp; Wellness</label>
            </value>
            <value>
                <fullName>Home</fullName>
                <label>Home &amp; Garden</label>
            </value>
            <value>
                <fullName>Humor</fullName>
            </value>
            <value>
                <fullName>Lifetstyle</fullName>
                <label>Lifetstyles</label>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Ron</fullName>
                <label>RON</label>
            </value>
            <value>
                <fullName>Social Networks</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>