force-app/main/default/objects/Targeting__c/fields/VerticalNew__c.field-meta.xml
<CustomField>
    <fullName>VerticalNew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vertical</label>
    <type>Checkbox</type>
</CustomField>