force-app/main/default/objects/Targeting__c/recordTypes/Geo_Targeting.recordType-meta.xml
<RecordType>
    <fullName>Geo_Targeting</fullName>
    <active>false</active>
    <label>Geo Targeting</label>
</RecordType>