force-app/main/default/objects/Targeting__c/recordTypes/Targeting.recordType-meta.xml
<RecordType>
    <fullName>Targeting</fullName>
    <active>true</active>
    <label>Targeting</label>
</RecordType>