force-app/main/default/objects/Targeting__c/validationRules/Custom.validationRule-meta.xml
<ValidationRule>
    <fullName>Custom</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL(Type__c,&quot;Custom&quot;),ISBLANK(  Custom_Description__c  ))</errorConditionFormula>
    <errorDisplayField>Custom_Description__c</errorDisplayField>
    <errorMessage>Enter Custom Description</errorMessage>
</ValidationRule>