force-app/main/default/objects/Targeting__c/validationRules/Event.validationRule-meta.xml
<ValidationRule>
    <fullName>Event</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL(Type__c,&quot;Event&quot;),ISBLANK( Event__c ))</errorConditionFormula>
    <errorDisplayField>Event__c</errorDisplayField>
    <errorMessage>Enter Event</errorMessage>
</ValidationRule>