force-app/main/default/objects/Targeting__c/validationRules/Keywords.validationRule-meta.xml
<ValidationRule>
    <fullName>Keywords</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL(Type__c,&quot;Keyword&quot;),ISBLANK(   Keywords__c   ))</errorConditionFormula>
    <errorDisplayField>Keywords__c</errorDisplayField>
    <errorMessage>Enter Keywords</errorMessage>
</ValidationRule>