force-app/main/default/objects/Targeting__c/validationRules/Require_Behavioral.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Behavioral</fullName>
    <active>true</active>
    <description>If Behavioral is checked then the drop down is required</description>
    <errorConditionFormula>AND(
  BehavorialCheck__c = TRUE,
  ISPICKVAL( Behavioral__c , &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Please enter the Behavioral</errorMessage>
</ValidationRule>