force-app/main/default/objects/Targeting__c/validationRules/Require_Category_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Category_Description</fullName>
    <active>true</active>
    <description>If &quot;yes&quot; in category exclusivity dropdown then the category description is required</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Category_Exclusivity__c , &quot;Yes&quot;),
  ISBLANK( Category_Description__c )
)</errorConditionFormula>
    <errorMessage>Please enter the Category Description</errorMessage>
</ValidationRule>