force-app/main/default/objects/Targeting__c/validationRules/Require_Category_Exclusivity.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Category_Exclusivity</fullName>
    <active>true</active>
    <description>If Event is filled out then &quot;Category Exclusivity is a required dropdown field</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK( Event2__c ) ),
  ISPICKVAL( Category_Exclusivity__c, &quot;&quot; )
)</errorConditionFormula>
    <errorMessage>Please enter the Catgeory Exclusivity</errorMessage>
</ValidationRule>