force-app/main/default/objects/Targeting__c/validationRules/Require_Geo.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Geo</fullName>
    <active>true</active>
    <description>Targeting is required to enter at least one Geo field</description>
    <errorConditionFormula>AND(
 ISBLANK( Campaign_Zip_Code__c ),
 ISBLANK( Campaign_City__c ),
 ISBLANK( Campaign_State_Province_New__c ),
 ISBLANK( Campaign_DMA_New__c ),
 ISBLANK( Campaign_Country__c )
)</errorConditionFormula>
    <errorMessage>Please enter a Geo target</errorMessage>
</ValidationRule>